--- a/src/sample/PuzzleGameScreen.fxml
+++ b/src/sample/PuzzleGameScreen.fxml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="gameScreenAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@PuzzleGameScreenStyleSheet.css" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="gameScreenAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@PuzzleGameScreenStyleSheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GameController">
    <children>
-      <Button layoutX="525.0" layoutY="352.0" mnemonicParsing="false" styleClass="Button" stylesheets="@PuzzleGameScreenStyleSheet.css" text="Reset" />
-      <GridPane fx:id="puzzleGrid" layoutX="134.0" layoutY="34.0" prefHeight="332.0" prefWidth="332.0">
+      <Button layoutX="449.0" layoutY="331.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="107.0" styleClass="Button" text="Reset">
+         <stylesheets>
+            <URL value="@PuzzleGameScreenStyleSheet.css" />
+            <URL value="@PuzzleMenusStyleSheet.css" />
+         </stylesheets></Button>
+      <GridPane fx:id="puzzleGrid" layoutX="30.0" layoutY="27.0" prefHeight="332.0" prefWidth="332.0" styleClass="GridPane" stylesheets="@PuzzleGameScreenStyleSheet.css">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="241.0" minWidth="10.0" prefWidth="240.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="241.0" minWidth="10.0" prefWidth="241.0" />
@@ -20,5 +25,6 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
+      <Button layoutX="449.0" layoutY="297.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="107.0" styleClass="Button" stylesheets="@PuzzleMenusStyleSheet.css" text="Menu" />
    </children>
 </AnchorPane>
