Puzzles are no longer buttons, they are Panes. images on the puzzles are now shuffled

--- a/src/sample/PuzzleGameScreenStyleSheet.css
+++ b/src/sample/PuzzleGameScreenStyleSheet.css
@@ -4,17 +4,12 @@
     -fx-border-width: 3;
 }
 
-#puzzleButton:hover{
-    -fx-border-width: 0;
-    -fx-border-color: #1d1d1d;
-}
-
-#puzzleButton{
-    -fx-border-width: 0;
-    -fx-border-color: rgba(29, 29, 29, 0);
-}
-
 .GridPane{
+    -fx-border-width: 3;
+    -fx-border-color: #a60083;
+}
+
+.ImageView{
     -fx-border-width: 3;
     -fx-border-color: #a60083;
 }
