--- a/src/sample/MainMenu.fxml
+++ b/src/sample/MainMenu.fxml
@@ -12,7 +12,7 @@
       <Button layoutX="192.0" layoutY="236.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="216.0" styleClass="Button" text="VIEW SCORES" AnchorPane.bottomAnchor="129.0" AnchorPane.leftAnchor="192.0" AnchorPane.rightAnchor="192.0" AnchorPane.topAnchor="236.0"/>
       <Button fx:id="exitGame" layoutX="192.0" layoutY="277.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="216.0" styleClass="Button" text="EXIT GAME" AnchorPane.bottomAnchor="88.0" AnchorPane.leftAnchor="192.0" AnchorPane.rightAnchor="192.0" AnchorPane.topAnchor="277.0"
               onAction="#exitGame"/>
-      <Text fill="WHITE" layoutX="32.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Text" text="PUZZLE PICS" textAlignment="CENTER" wrappingWidth="536.1669921875">
+      <Text fx:id="title" fill="WHITE" layoutX="32.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Text" text="PUZZLE PICS" textAlignment="CENTER" wrappingWidth="536.1669921875">
          <font>
             <Font size="65.0" />
          </font>
