--- a/src/sample/PuzzleGameScreenStyleSheet.css
+++ b/src/sample/PuzzleGameScreenStyleSheet.css
@@ -10,7 +10,19 @@
 }
 
 .ImageView{
-    -fx-border-width: 3;
+    -fx-border-width: 1;
+    -fx-border-color: #a60083;
+}
+
+.ImageView:hover{
+    opacity: 0.75;
+    -fx-border-radius: 5;
+    -fx-border-color: #a60083;
+}
+
+.ImageView:pressed{
+    opacity: 0.5;
+    -fx-border-radius: 5;
     -fx-border-color: #a60083;
 }
 
