--- a/src/sample/PuzzleGameScreen.fxml
+++ b/src/sample/PuzzleGameScreen.fxml
@@ -11,7 +11,7 @@
       <Button fx:id="resetGameButton" onMouseClicked="#resetBoard" layoutX="428.0" layoutY="331.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="107.0" styleClass="Button" stylesheets="@PuzzleMenusStyleSheet.css" text="Reset" />
       <GridPane fx:id="puzzleGrid" layoutX="30.0" layoutY="27.0" prefHeight="332.0" prefWidth="332.0" styleClass="GridPane" stylesheets="@PuzzleGameScreenStyleSheet.css">
       </GridPane>
-      <Button layoutX="428.0" layoutY="301.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="107.0" styleClass="Button" stylesheets="@PuzzleMenusStyleSheet.css" text="Menu" />
+      <Button fx:id="goToMenu"  onAction="#setGoToMenu" layoutX="428.0" layoutY="301.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="107.0" styleClass="Button" stylesheets="@PuzzleMenusStyleSheet.css" text="Menu" />
       <TextField alignment="CENTER" layoutX="376.0" layoutY="57.0" prefHeight="108.0" prefWidth="210.0" promptText="00:00:00" styleClass="TextField" stylesheets="@PuzzleGameScreenStyleSheet.css">
          <font>
             <Font size="38.0" />
