--- a/src/sample/PuzzleGameScreen.fxml
+++ b/src/sample/PuzzleGameScreen.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@PuzzleGameScreenStyleSheet.css" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@PuzzleGameScreenStyleSheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="resetGameButton" onMouseClicked="#resetBoard" layoutX="428.0" layoutY="331.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="107.0" styleClass="Button" stylesheets="@PuzzleMenusStyleSheet.css" text="Reset" />
+      <Button fx:id="resetGameButton" layoutX="428.0" layoutY="331.0" mnemonicParsing="false" onMouseClicked="#resetBoard" prefHeight="28.0" prefWidth="107.0" styleClass="Button" stylesheets="@PuzzleMenusStyleSheet.css" text="Reset" />
       <GridPane fx:id="puzzleGrid" layoutX="30.0" layoutY="27.0" prefHeight="332.0" prefWidth="332.0" styleClass="GridPane" stylesheets="@PuzzleGameScreenStyleSheet.css">
       </GridPane>
-      <Button fx:id="goToMenu"  onAction="#setGoToMenu" layoutX="428.0" layoutY="301.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="107.0" styleClass="Button" stylesheets="@PuzzleMenusStyleSheet.css" text="Menu" />
-      <TextField alignment="CENTER" layoutX="376.0" layoutY="57.0" prefHeight="108.0" prefWidth="210.0" promptText="00:00:00" styleClass="TextField" stylesheets="@PuzzleGameScreenStyleSheet.css">
+      <Button fx:id="goToMenu" layoutX="428.0" layoutY="301.0" mnemonicParsing="false" onAction="#setGoToMenu" prefHeight="28.0" prefWidth="107.0" styleClass="Button" stylesheets="@PuzzleMenusStyleSheet.css" text="Menu" />
+      <Label fx:id="timer" layoutX="406.0" layoutY="40.0" prefHeight="83.0" prefWidth="166.0" styleClass="Text" stylesheets="@PuzzleMenusStyleSheet.css" text="00:00:00" textFill="#bfbabe">
          <font>
             <Font size="38.0" />
          </font>
-      </TextField>
+      </Label>
    </children>
 </AnchorPane>
