--- a/src/sample/fxmlFiles/Puzzle.fxml
+++ b/src/sample/fxmlFiles/Puzzle.fxml
@@ -7,7 +7,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0"
             xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1"
-            stylesheets="@PuzzleGameScreenStyleSheet.css"
+            stylesheets="@../Stylesheets/PuzzleGameScreenStyleSheet.css"
             styleClass="ImageView">
    <children>
       <ImageView fx:id="imageView" onMouseClicked="#puzzleClicked" fitHeight="200.0" fitWidth="200.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true"
