--- a/src/sample/fxmlFiles/PuzzleSetUpScreen.fxml
+++ b/src/sample/fxmlFiles/PuzzleSetUpScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@PuzzleMenusStyleSheet.css" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@../Stylesheets/PuzzleMenusStyleSheet.css" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TextField fx:id="difficultySetField" alignment="CENTER" layoutX="192.0" layoutY="98.0" onAction="#difficultyValueSet" promptText="2" styleClass="TextField">
          <font>
@@ -26,8 +26,8 @@
       <ImageView fx:id="selectedImageDisplay" fitHeight="189.0" fitWidth="290.0" layoutX="148.0" layoutY="156.0">
       </ImageView>
       <Button fx:id="getImageButton" layoutX="237.0" layoutY="352.0" mnemonicParsing="false" onAction="#pickImage" styleClass="Button" text="Change Image" />
-      <Button fx:id="initializeGame" layoutX="519.0" layoutY="322.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="55.0" styleClass="Button" stylesheets="@PuzzleMenusStyleSheet.css" text="➡︎" textFill="WHITE"
-      onAction="#setInitializeGame">
+      <Button fx:id="initializeGame" layoutX="519.0" layoutY="322.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="55.0" styleClass="Button" stylesheets="@../Stylesheets/PuzzleMenusStyleSheet.css" text="➡︎" textFill="WHITE"
+              onAction="#setInitializeGame">
          <font>
             <Font size="30.0" />
          </font>
