--- a/src/sample/Stylesheets/PuzzleMenusStyleSheet.css
+++ b/src/sample/Stylesheets/PuzzleMenusStyleSheet.css
@@ -39,5 +39,5 @@
     -fx-font-family: "Futura";
     -fx-text-fill: #ffffff;
     -fx-border-width: 1;
-    -fx-border-color: #1d1d1d;
+    -fx-border-color: #ffffff;
 }
